--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -1,38 +1,38 @@
-@import './colors.scss';
+@import "../styles/colors.scss";
 
 * {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: $background;
+  background-color: $background;
 }
 
-input[type="password"], 
+input[type="password"],
 input[type="email"] {
-    border: 1px solid $primaryLight;
-    line-height: 40px;
-    border-radius: 4px;
-    padding: 0px 40px 0px 8px;
+  border: 1px solid $primaryLight;
+  line-height: 40px;
+  border-radius: 4px;
+  padding: 0px 40px 0px 8px;
 
-    &:focus {
-        outline-color: $primaryLight;
-    }
+  &:focus {
+    outline-color: $primaryLight;
+  }
 }
 
 button {
-    background: $primary;
-    color: $white;
-    border-radius: 8px;
-    font-size: 16px;
-    border: none;
-    line-height: 60px;
+  background-color: $primary;
+  line-height: 60px;
+  color: $white;
+  border-radius: 8px;
+  font-size: 16px;
+  border: none;
 
-    &:hover {
-        opacity: 0.9;
-    }
+  &:hover {
+    opacity: 0.9;
+  }
 }
